@@ -1,3 +1,5 @@
+<Flags CXXFLAGS="-O0 -g"/>
+<Flags LDFLAGS="-g"/>
 <use   name="FWCore/PluginManager"/>
 <use   name="FWCore/Framework"/>
 <use   name="FWCore/ServiceRegistry"/>
